oxiplate-derive/tests/config/crates/escaper-group-non-ident/tests/broken/escaper-group-non-ident.stderr
error: Failed to parse `/oxiplate.toml`: Escaper group `mark down` must match `[a-zA-Z_][a-zA-Z0-9_]*`
 --> tests/broken/escaper-group-non-ident.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
